fixed build and aligned jsonb MasterContent.xml to fit with new task tables