@@ -18,15 +18,15 @@
  */
 package org.apache.syncope.core.persistence.jpa.entity.task;
 
+import java.util.Arrays;
 import java.util.HashSet;
-import java.util.List;
 import java.util.Set;
-import javax.persistence.DiscriminatorValue;
 import javax.persistence.Entity;
 import javax.persistence.EnumType;
 import javax.persistence.Enumerated;
 import javax.persistence.Lob;
 import javax.persistence.ManyToOne;
+import javax.persistence.Table;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.syncope.common.lib.types.AnyTypeKind;
 import org.apache.syncope.common.lib.types.ResourceOperation;
@@ -41,11 +41,13 @@ import org.identityconnectors.framework.common.objects.Attribute;
  * Encapsulate all information about a propagation task.
  */
 @Entity
-@DiscriminatorValue("PropagationTask")
 @PropagationTaskCheck
+@Table(name = JPAPropagationTask.TABLE)
 public class JPAPropagationTask extends AbstractTask implements PropagationTask {
 
     private static final long serialVersionUID = 7086054884614511210L;
+    
+    public static final String TABLE = "PropagationTask";
 
     /**
      * @see ResourceOperation
@@ -113,7 +115,7 @@ public class JPAPropagationTask extends AbstractTask implements PropagationTask 
     public Set<Attribute> getAttributes() {
         Set<Attribute> result = new HashSet<>();
         if (StringUtils.isNotBlank(this.attributes)) {
-            result.addAll(List.of(POJOHelper.deserialize(this.attributes, Attribute[].class)));
+            result.addAll(Arrays.asList(POJOHelper.deserialize(this.attributes, Attribute[].class)));
         }
 
         return result;
